predicting the next word
-- creating a function to predict the next word
-- saving the model and the tokenizer

--- a/data.ipynb
+++ b/data.ipynb
@@ -364,6 +364,118 @@
     "    verbose = 1\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict the Next Word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predictNextWord(model, tokenizer, text, sequence_length):\n",
+    "    tokenList = tokenizer.texts_to_sequences([text])[0]\n",
+    "    \n",
+    "    if len(tokenList) >= sequenceLength:\n",
+    "        tokenList = tokenList[-(sequence_length - 1) : ]\n",
+    "    \n",
+    "    tokenList           = pad_sequences([tokenList], maxlen = sequence_length - 1, padding = 'pre')\n",
+    "    predictedWord       = model.predict(tokenList, verbose = 0)\n",
+    "    predictedWordIndex  = np.argmax(predictedWord, axis = 1)\n",
+    "    \n",
+    "    for word, index in tokenizer.word_index.items():\n",
+    "        if index == predictedWordIndex:\n",
+    "            return word\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputText = \"To be or not to be\"\n",
+    "maxSequenceLength = model.input_shape[1] + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nextWord = predictNextWord(model, tokenizer, inputText, maxSequenceLength)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Text:         To be or not to be\n",
+      "Predicted Word:     sounded\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Input Text:         {inputText}')\n",
+    "print(f'Predicted Word:     {nextWord}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('prediction_lstm.keras')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the Tokenizer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizerFileName       = 'tokenizer.pickle'\n",
+    "writeBinaryMode         = 'wb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(tokenizerFileName, writeBinaryMode) as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol = pickle.HIGHEST_PROTOCOL)"
+   ]
   }
  ],
  "metadata": {
