GRU RNN variation

--- a/gruRNN.ipynb
+++ b/gruRNN.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
-    "from nltk.corpus    import gutenberg\n",
-    "import pandas       as pd"
+    "from nltk.corpus        import gutenberg\n",
+    "import pandas           as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,18 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'shakespeare-hamlet.txt'\n",
-    "fileName = 'hamlet.txt'\n",
-    "writeOperation = 'w'\n",
-    "readOperation = 'r'\n",
-    "data = gutenberg.raw(text)\n",
+    "text =              'shakespeare-hamlet.txt'\n",
+    "fileName =          'hamlet.txt'\n",
+    "writeOperation =    'w'\n",
+    "readOperation =     'r'\n",
     "\n",
-    "with open(fileName, writeOperation) as file:\n",
-    "    file.write(data)"
+    "with open(fileName, readOperation) as file:\n",
+    "    textFromFile = file.read().lower()"
    ]
   },
   {
@@ -72,24 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing.text        import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence    import pad_sequences   \n",
+    "from tensorflow.keras.preprocessing.sequence    import pad_sequences\n",
     "from sklearn.model_selection                    import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(fileName, readOperation) as file:\n",
-    "    textFromFile = file.read().lower()"
    ]
   },
   {
@@ -98,12 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tokenize The Text from the File\n",
-    "\n",
     "tokenizer = Tokenizer()\n",
-    "tokenizer.fit_on_texts([textFromFile])\n",
-    "\n",
-    "totalWords = len(tokenizer.word_index) + 1"
+    "tokenizer.fit_on_texts([textFromFile])"
    ]
   },
   {
@@ -1143,25 +1128,13 @@
     }
    ],
    "source": [
+    "totalWords = len(tokenizer.word_index) + 1\n",
     "totalWords"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create an Input Sequence\n",
-    "# For each line in the text from the file, create a variable inputSequence to be used for input\n",
-    "# Each line, convert each line to each sequence, convert to a token and append to the original list\n",
-    "# Once the input sequences are create from words in the form of tokens from the original text, \n",
-    "# apply padding to ensure that the length of each indivual sequences are equal. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2157,7 @@
        " ...]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2177,7 @@
        "14"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2204,7 @@
        "       [   0,    0,    0, ..., 1047,    4,  193]], dtype=int32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2250,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2264,53 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   0,    0,    0, ...,    0,    0,    1],\n",
-       "       [   0,    0,    0, ...,    0,    1,  687],\n",
-       "       [   0,    0,    0, ...,    1,  687,    4],\n",
-       "       ...,\n",
-       "       [   0,    0,    0, ...,  687,    4,   45],\n",
-       "       [   0,    0,    0, ...,    4,   45, 1047],\n",
-       "       [   0,    0,    0, ...,   45, 1047,    4]], dtype=int32)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 687,    4,   45, ..., 1047,    4,  193], dtype=int32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2252,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2339,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,23 +2277,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define the LSTM RNN Model"
+    "## GRU RNN Model Variation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models        import Sequential\n",
-    "from tensorflow.keras.layers        import Embedding, LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.layers        import Embedding, GRU, Dense, Dropout\n",
     "from tensorflow.keras.callbacks     import EarlyStopping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2391,42 +2318,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-19 01:14:55.580221: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
+      "2025-02-19 01:14:55.580401: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
+      "2025-02-19 01:14:55.580412: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
+      "2025-02-19 01:14:55.580693: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2025-02-19 01:14:55.581039: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
-    "model.add(\n",
-    "    Embedding(\n",
-    "        totalWords,\n",
-    "        selectedWords,\n",
-    "        input_length = sequenceLength - 1\n",
-    "    )\n",
-    ")\n",
+    "model.add(Embedding(totalWords,selectedWords,input_length = sequenceLength - 1))\n",
     "\n",
-    "model.add(\n",
-    "    LSTM(\n",
-    "        neurons,\n",
-    "        return_sequences = True\n",
-    "    )\n",
-    ")\n",
+    "model.add(GRU(neurons,return_sequences = True))\n",
+    "model.add(Dropout(dropoutLayer))\n",
+    "model.add(GRU(100))\n",
     "\n",
-    "model.add(\n",
-    "    Dropout(dropoutLayer)\n",
-    ")\n",
-    "\n",
-    "model.add(\n",
-    "    LSTM(\n",
-    "        100\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "model.add(\n",
-    "    Dense(\n",
-    "        totalWords,\n",
-    "        activation = activationFunction\n",
-    "    )\n",
-    ")"
+    "model.add(Dense(totalWords,activation = activationFunction))"
    ]
   },
   {
@@ -2438,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2449,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2462,48 +2377,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_1 (Embedding)     (None, 13, 100)           481800    \n",
-      "                                                                 \n",
-      " lstm_2 (LSTM)               (None, 13, 150)           150600    \n",
-      "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 13, 150)           0         \n",
-      "                                                                 \n",
-      " lstm_3 (LSTM)               (None, 100)               100400    \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 4818)              486618    \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 1219418 (4.65 MB)\n",
-      "Trainable params: 1219418 (4.65 MB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "_________________________________________________________________\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_1 (Embedding)     (None, 13, 100)           481800    \n",
+      " embedding (Embedding)       (None, 13, 100)           481800    \n",
       "                                                                 \n",
-      " lstm_2 (LSTM)               (None, 13, 150)           150600    \n",
+      " gru (GRU)                   (None, 13, 150)           113400    \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 13, 150)           0         \n",
+      " dropout (Dropout)           (None, 13, 150)           0         \n",
       "                                                                 \n",
-      " lstm_3 (LSTM)               (None, 100)               100400    \n",
+      " gru_1 (GRU)                 (None, 100)               75600     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 4818)              486618    \n",
+      " dense (Dense)               (None, 4818)              486618    \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 1219418 (4.65 MB)\n",
-      "Trainable params: 1219418 (4.65 MB)\n",
+      "Total params: 1157418 (4.42 MB)\n",
+      "Trainable params: 1157418 (4.42 MB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
@@ -2517,38 +2417,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train The Model"
+    "## Train the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "644/644 [==============================] - 17s 24ms/step - loss: 6.9085 - accuracy: 0.0315 - val_loss: 6.7522 - val_accuracy: 0.0363\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-19 01:14:57.293251: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "644/644 [==============================] - 18s 25ms/step - loss: 7.0260 - accuracy: 0.0315 - val_loss: 7.0005 - val_accuracy: 0.0315\n",
       "Epoch 2/10\n",
-      "644/644 [==============================] - 15s 23ms/step - loss: 6.4678 - accuracy: 0.0368 - val_loss: 6.8841 - val_accuracy: 0.0466\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 6.5520 - accuracy: 0.0377 - val_loss: 6.9364 - val_accuracy: 0.0377\n",
       "Epoch 3/10\n",
-      "644/644 [==============================] - 15s 23ms/step - loss: 6.3344 - accuracy: 0.0438 - val_loss: 6.9307 - val_accuracy: 0.0513\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 6.3413 - accuracy: 0.0478 - val_loss: 6.9383 - val_accuracy: 0.0466\n",
       "Epoch 4/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 6.2206 - accuracy: 0.0495 - val_loss: 6.8874 - val_accuracy: 0.0525\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 6.1422 - accuracy: 0.0575 - val_loss: 6.9397 - val_accuracy: 0.0571\n",
       "Epoch 5/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 6.0948 - accuracy: 0.0519 - val_loss: 6.9220 - val_accuracy: 0.0544\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 5.9154 - accuracy: 0.0751 - val_loss: 6.9696 - val_accuracy: 0.0670\n",
       "Epoch 6/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 5.9626 - accuracy: 0.0569 - val_loss: 6.9623 - val_accuracy: 0.0596\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 5.6826 - accuracy: 0.0879 - val_loss: 6.9577 - val_accuracy: 0.0713\n",
       "Epoch 7/10\n",
-      "644/644 [==============================] - 15s 23ms/step - loss: 5.8221 - accuracy: 0.0665 - val_loss: 7.0405 - val_accuracy: 0.0622\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 5.4781 - accuracy: 0.0930 - val_loss: 7.0729 - val_accuracy: 0.0699\n",
       "Epoch 8/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 5.6896 - accuracy: 0.0736 - val_loss: 7.0452 - val_accuracy: 0.0653\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 5.2759 - accuracy: 0.1028 - val_loss: 7.1275 - val_accuracy: 0.0713\n",
       "Epoch 9/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 5.5620 - accuracy: 0.0792 - val_loss: 7.1086 - val_accuracy: 0.0674\n",
+      "644/644 [==============================] - 13s 21ms/step - loss: 5.0809 - accuracy: 0.1090 - val_loss: 7.2532 - val_accuracy: 0.0715\n",
       "Epoch 10/10\n",
-      "644/644 [==============================] - 14s 22ms/step - loss: 5.4444 - accuracy: 0.0848 - val_loss: 7.2158 - val_accuracy: 0.0676\n"
+      "644/644 [==============================] - 13s 21ms/step - loss: 4.8819 - accuracy: 0.1185 - val_loss: 7.3252 - val_accuracy: 0.0713\n"
      ]
     }
    ],
@@ -2566,12 +2479,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict the Next Word"
+    "## Predict The Next Word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2593,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2612,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2533,7 @@
      "output_type": "stream",
      "text": [
       "Input Text:         To be or not to be\n",
-      "Predicted Word:     more\n"
+      "Predicted Word:     much\n"
      ]
     }
    ],
@@ -2633,28 +2546,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the Model"
+    "## Save the Model and Tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('prediction_lstm.keras')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save the Tokenizer "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2664,7 +2561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('prediction_lstm_gru.keras')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
