--- a/gruRNN.ipynb
+++ b/gruRNN.ipynb
@@ -290,7 +290,7 @@
     "history = model.fit(\n",
     "    x_train,\n",
     "    y_train,\n",
-    "    epochs = 10,\n",
+    "    epochs = 100,\n",
     "    validation_data = (x_test, y_test),\n",
     "    verbose = 1\n",
     ")"
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizerFileName       = 'tokenizer.pickle'\n",
+    "tokenizerFileName       = 'tokenizerGRU.pickle'\n",
     "writeBinaryMode         = 'wb'"
    ]
   },
@@ -377,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('prediction_lstm_gru.h5')"
+    "model.save('prediction_gru.keras')"
    ]
   },
   {
