--- a/lstmRNN.ipynb
+++ b/lstmRNN.ipynb
@@ -359,7 +359,7 @@
     "history = model.fit(\n",
     "    x_train,\n",
     "    y_train,\n",
-    "    epochs = 10,\n",
+    "    epochs = 100,\n",
     "    validation_data = (x_test, y_test),\n",
     "    verbose = 1\n",
     ")"
@@ -452,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizerFileName       = 'tokenizer.pickle'\n",
+    "tokenizerFileName       = 'tokenizerLSTM.pickle'\n",
     "writeBinaryMode         = 'wb'"
    ]
   },
